fix homepage links; add attire link; fix v-whitespace in additional details

--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,7 @@
   em {
     @apply font-(--font-fancy) not-italic;
     font-size: 2.5em;
+    line-height: normal;
   }
 
   p {
